@@ -3,7 +3,6 @@ package pl.allegro.tech.opel;
 import org.parboiled.errors.ErrorUtils;
 import org.parboiled.errors.ParseError;
 
-import java.util.Collections;
 import java.util.List;
 
 public class ExpressionValidationResult {
@@ -11,7 +10,7 @@ public class ExpressionValidationResult {
     private final String errorMessage;
 
     static ExpressionValidationResult valid() {
-        return new ExpressionValidationResult(true, Collections.emptyList());
+        return new ExpressionValidationResult(true, List.of());
     }
 
     static ExpressionValidationResult invalid(List<ParseError> errors) {
